--- a/index.html
+++ b/index.html
@@ -3,36 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Juego de Clics</title>
-    <style>
-        body {
-            text-align: center;
-            font-family: Arial, sans-serif;
-            margin-top: 50px;
-        }
-        button {
-            font-size: 20px;
-            padding: 10px 20px;
-            cursor: pointer;
-        }
-        h1 {
-            color: #4CAF50;
-        }
-    </style>
+    <title>Aprendiendo con @LaProfeVivy</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>¡Juego de Clics!</h1>
-    <p>Haz clic en el botón para sumar puntos:</p>
-    <button onclick="sumarPuntos()">Clic aquí</button>
-    <p id="puntos">Puntos: 0</p>
-
-    <script>
-        let puntos = 0;
-
-        function sumarPuntos() {
-            puntos++;
-            document.getElementById('puntos').innerText = 'Puntos: ' + puntos;
-        }
-    </script>
+    <h1>Aprendiendo con @LaProfeVivy</h1>
+    <h2>Inglés</h2>
+    <p>Instrucciones: Arrastra las palabras a la categoría correcta. Si la palabra pertenece a la categoría "Animal", arrástrala a "Animal". Si pertenece a "Fruta", arrástrala a "Fruta".</p>
+    <div class="word-container">
+        <div class="word" draggable="true" id="word1" data-word="animal">Perro</div>
+        <div class="word" draggable="true" id="word2" data-word="animal">Gato</div>
+        <div class="word" draggable="true" id="word3" data-word="fruta">Manzana</div>
+    </div>
+    <div class="context-container">
+        <div class="context" id="context1" data-context="animal">Animal</div>
+        <div class="context" id="context2" data-context="fruta">Fruta</div>
+    </div>
+    <script src="script.js"></script>
 </body>
 </html>
