--- a/index.html
+++ b/index.html
@@ -1,24 +1,44 @@
+HTML
+
 <!DOCTYPE html>
 <html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aprendiendo con @LaProfeVivy</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Juegos</title>
+    <style>
+        body {
+            font-family: sans-serif;
+            margin: 20px;
+        }
+        h1 {
+            text-align: center;
+        }
+        .game-list {
+            list-style: none;
+            padding: 0;
+        }
+        .game-list li {
+            margin-bottom: 10px;
+        }
+        .game-list a {
+            display: block;
+            padding: 10px;
+            background-color: #f0f0f0;
+            border: 1px solid #ccc;
+            text-decoration: none;
+            color: #333;
+        }
+    </style>
 </head>
 <body>
-    <h1>Aprendiendo con @LaProfeVivy</h1>
-    <h2>Inglés</h2>
-    <p>Instrucciones: Arrastra las palabras a la categoría correcta. Si la palabra pertenece a la categoría "Animal", arrástrala a "Animal". Si pertenece a "Fruta", arrástrala a "Fruta".</p>
-    <div class="word-container">
-        <div class="word" draggable="true" id="word1" data-word="animal">Perro</div>
-        <div class="word" draggable="true" id="word2" data-word="animal">Gato</div>
-        <div class="word" draggable="true" id="word3" data-word="fruta">Manzana</div>
-    </div>
-    <div class="context-container">
-        <div class="context" id="context1" data-context="animal">Animal</div>
-        <div class="context" id="context2" data-context="fruta">Fruta</div>
-    </div>
-    <script src="script.js"></script>
+    <h1>Lista de Juegos</h1>
+    <ul class="game-list">
+        <li><a href="arrastre/juego1.html">Juego 1 (Arrastre)</a></li>
+        <li><a href="arrastre/juego2.html">Juego 2 (Arrastre)</a></li>
+        <li><a href="arrastre/juego3.html">Juego 3 (Arrastre)</a></li>
+        <li><a href="ingles/juego4.html">Juego 4 (Inglés)</a></li>
+        <li><a href="ingles/juego5.html">Juego 5 (Inglés)</a></li>
+        </ul>
 </body>
 </html>
