--- a/index.html
+++ b/index.html
@@ -1,44 +1,16 @@
-HTML
-
 <!DOCTYPE html>
-<html lang="es">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Juegos</title>
-    <style>
-        body {
-            font-family: sans-serif;
-            margin: 20px;
-        }
-        h1 {
-            text-align: center;
-        }
-        .game-list {
-            list-style: none;
-            padding: 0;
-        }
-        .game-list li {
-            margin-bottom: 10px;
-        }
-        .game-list a {
-            display: block;
-            padding: 10px;
-            background-color: #f0f0f0;
-            border: 1px solid #ccc;
-            text-decoration: none;
-            color: #333;
-        }
-    </style>
+  <title>Juegos</title>
 </head>
 <body>
-    <h1>Lista de Juegos</h1>
-    <ul class="game-list">
-        <li><a href="arrastre/juego1.html">Juego 1 (Arrastre)</a></li>
-        <li><a href="arrastre/juego2.html">Juego 2 (Arrastre)</a></li>
-        <li><a href="arrastre/juego3.html">Juego 3 (Arrastre)</a></li>
-        <li><a href="ingles/juego4.html">Juego 4 (Inglés)</a></li>
-        <li><a href="ingles/juego5.html">Juego 5 (Inglés)</a></li>
-        </ul>
+  <h1>Lista de Juegos</h1>
+  <ul>
+    <li><a href="arrastre/juego1.html">Juego 1 (Arrastre)</a></li>
+    <li><a href="arrastre/juego2.html">Juego 2 (Arrastre)</a></li>
+    <li><a href="arrastre/juego3.html">Juego 3 (Arrastre)</a></li>
+    <li><a href="ingles/juego4.html">Juego 4 (Inglés)</a></li>
+    <li><a href="ingles/juego5.html">Juego 5 (Inglés)</a></li>
+  </ul>
 </body>
 </html>
