--- a/index.html
+++ b/index.html
@@ -6,11 +6,10 @@
 <body>
   <h1>Lista de Juegos</h1>
   <ul>
-    <li><a href="arrastre/juego1.html">Juego 1 (Arrastre)</a></li>
-    <li><a href="arrastre/juego2.html">Juego 2 (Arrastre)</a></li>
-    <li><a href="arrastre/juego3.html">Juego 3 (Arrastre)</a></li>
-    <li><a href="ingles/juego4.html">Juego 4 (Inglés)</a></li>
-    <li><a href="ingles/juego5.html">Juego 5 (Inglés)</a></li>
+   <ul>
+    <li><a href="arrastre/">Arrastre</a></li>
+    <li><a href="ingles/">Inglés</a></li>
+  </ul>
   </ul>
 </body>
 </html>
