--- a/index.html
+++ b/index.html
@@ -5,11 +5,10 @@
 </head>
 <body>
   <h1>Lista de Juegos</h1>
-  <ul>
    <ul>
-    <li><a href="arrastre/">Arrastre</a></li>
-    <li><a href="ingles/">Inglés</a></li>
-  </ul>
+    <li><a href="Arrastre/">Arrastre</a></li>
+    <li><a href="Preguntas/">Preguntas</a></li>
+     <li><a href="Flascards/">Flascards</a></li>
   </ul>
 </body>
 </html>
