--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
    <ul>
     <li><a href="Arrastre/">Arrastre</a></li>
     <li><a href="Preguntas/">Preguntas</a></li>
-     <li><a href="Flascards/">Flascards</a></li>
+     <li><a href="Flashcards/">Flashcards</a></li>
   </ul>
 </body>
 </html>
