--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
-
+</head>
+<body>
+  <h1>Lista de Juegos</h1>
+  <ul>
+   <ul>
+    <li><a href="Acordeon/">Acordeon</a></li>
+    <li><a href="Arrastre/">Arrastre</a></li>
+  </ul>
+    <li><a href="Colores/">Colores</a></li>
+    <li><a href="Flashcards/">Flashcards</a></li>
+     <li><a href="LecturaRapida/">LecturaRapida</a></li>
+    <li><a href="Arrastre/">Arrastre</a></li>
+    <li><a href="Preguntas/">Preguntas</a></li>
+     <li><a href="Pasapalabras/">Pasapalabras</a></li>
+    <li><a href="Preguntas/">Preguntas</a></li>
+    <li><a href="card/">card</a></li>
+     <li><a href="Relacion/">Relacionpte</a></li>
+  </ul>
+</body>
+</html>
