--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <title>Juegos de Arrastre</title>
 </head>
 <body>
-  <h1>Lista de Juegos</h1>
+  <h1>Lista de codigos de Juegos de la profe Vivy</h1>
   <ul>
     <li><a href="Acordeon/">Acordeon</a></li>
     <li><a href="Arrastre/">Arrastre</a></li>
