--- a/index.html
+++ b/index.html
@@ -7,13 +7,17 @@
   <h1>Lista de codigos de Juegos de la profe Vivy</h1>
   <ul>
     <li><a href="Acordeon/">Acordeon</a></li>
+    <li><a href="Agrupacion/">Agrupacion</a></li>
     <li><a href="Arrastre/">Arrastre</a></li>
+    <li><a href="card/">card</a></li>
     <li><a href="Colores/">Colores</a></li>
+    <li><a href="DiagramaFlujo/">Diagrama de Flujo</a></li>
     <li><a href="Flashcards/">Flashcards</a></li>
+    <li><a href="Gato/">Gato</a></li>
     <li><a href="LecturaRapida/">LecturaRapida</a></li>
     <li><a href="Preguntas/">Preguntas</a></li>
     <li><a href="Pasapalabras/">Pasapalabras</a></li>
-    <li><a href="card/">card</a></li>
+    <li><a href="Localidades/">Localidades</a></li>
     <li><a href="Relacion/">Relacion_pte</a></li>
   </ul>
 </body>
