--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Juegos de Arrastre</title>
+  <title>Menu de Juegos  prueba</title>
 </head>
 <body>
   <style>
