--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <body>
 
 <div class="cat">
-  <img src="gato.png" alt="Gatito">
+  <img src="gato.png" alt="Gatito lindo">
 </div>
   <h1>Lista de codigos de Juegos de la profe Vivy</h1>
   <ul>
