--- a/GuerraDeEstrellas/index.html
+++ b/GuerraDeEstrellas/index.html
@@ -14,19 +14,19 @@
         table { border-collapse: collapse; width: 60%; background: white; }
         th, td { border: 1px solid #ddd; padding: 8px; text-align: center; }
         th { background-color: #ff5f7a; color: white; }
-        
+
         /* Estilos para el tablero */
         .grid-container {
             display: grid;
-            grid-template-columns: repeat(5, 50px);
-            grid-template-rows: repeat(5, 50px);
+            grid-template-columns: repeat(5, 60px);
+            grid-template-rows: repeat(5, 60px);
             gap: 5px;
             justify-content: center;
             margin: 20px auto;
         }
         .grid-item {
-            width: 50px;
-            height: 50px;
+            width: 60px;
+            height: 60px;
             display: flex;
             align-items: center;
             justify-content: center;
@@ -46,7 +46,7 @@
     <h1>Juego de Preguntas: Bogotá</h1>
 
     <h2>Pregunta Actual</h2>
-    <p id="question">Esperando nueva pregunta...</p>
+    <p id="question">Haz clic en "Nueva Pregunta" para empezar</p>
     <button onclick="generateQuestion()">Nueva Pregunta</button>
 
     <h2>Tablero de Preguntas</h2>
@@ -74,4 +74,3 @@
     </div>
 </body>
 </html>
-
