--- a/GuerraDeEstrellas/index.html
+++ b/GuerraDeEstrellas/index.html
@@ -10,12 +10,6 @@
     <style>
         body { font-family: Arial, sans-serif; text-align: center; background: #f8f8f8; }
         h1 { color: #333; }
-        .table-container { display: flex; justify-content: center; }
-        table { border-collapse: collapse; width: 60%; background: white; }
-        th, td { border: 1px solid #ddd; padding: 8px; text-align: center; }
-        th { background-color: #ff5f7a; color: white; }
-
-        /* Estilos para el tablero */
         .grid-container {
             display: grid;
             grid-template-columns: repeat(5, 60px);
@@ -53,24 +47,22 @@
     <div class="grid-container" id="questionBoard"></div>
 
     <h2>Tabla de Resultados</h2>
-    <div class="table-container">
-        <table>
-            <thead>
-                <tr>
-                    <th>Grupo</th>
-                    <th>Respuesta</th>
-                    <th>Puntos</th>
-                </tr>
-            </thead>
-            <tbody id="scoreboard">
-                <tr><td>Grupo 1</td><td id="resp1">-</td><td id="score1">0</td></tr>
-                <tr><td>Grupo 2</td><td id="resp2">-</td><td id="score2">0</td></tr>
-                <tr><td>Grupo 3</td><td id="resp3">-</td><td id="score3">0</td></tr>
-                <tr><td>Grupo 4</td><td id="resp4">-</td><td id="score4">0</td></tr>
-                <tr><td>Grupo 5</td><td id="resp5">-</td><td id="score5">0</td></tr>
-                <tr><td>Grupo 6</td><td id="resp6">-</td><td id="score6">0</td></tr>
-            </tbody>
-        </table>
-    </div>
+    <table border="1">
+        <thead>
+            <tr>
+                <th>Grupo</th>
+                <th>Respuesta</th>
+                <th>Puntos</th>
+            </tr>
+        </thead>
+        <tbody id="scoreboard">
+            <tr><td>Grupo 1</td><td id="resp1">-</td><td id="score1">0</td></tr>
+            <tr><td>Grupo 2</td><td id="resp2">-</td><td id="score2">0</td></tr>
+            <tr><td>Grupo 3</td><td id="resp3">-</td><td id="score3">0</td></tr>
+            <tr><td>Grupo 4</td><td id="resp4">-</td><td id="score4">0</td></tr>
+            <tr><td>Grupo 5</td><td id="resp5">-</td><td id="score5">0</td></tr>
+            <tr><td>Grupo 6</td><td id="resp6">-</td><td id="score6">0</td></tr>
+        </tbody>
+    </table>
 </body>
 </html>
