--- a/DadoVivy/index.html
+++ b/DadoVivy/index.html
@@ -8,7 +8,7 @@
         body {
             font-family: 'Arial', sans-serif;
             text-align: center;
-            background: url('fondo.jpg') no-repeat center center fixed;
+            background: url('fondo1.jpg') no-repeat center center fixed;
             background-size: cover;
             color: white;
             padding: 20px;
