--- a/DadoVivy/index.html
+++ b/DadoVivy/index.html
@@ -99,7 +99,8 @@
     </style>
 </head>
 <body>
-    <h1>Aprendiendo con: LaProfeVivy</h1>
+    <h1>Aprendiendo con: </h1>
+       <h2> LaProfeVivy</h2>
     
     <div class="container">
         <!-- Contenedor 1: Lanzar Dado para Grupo -->
