--- a/ruletaVivy/index.html
+++ b/ruletaVivy/index.html
@@ -11,14 +11,25 @@
         body { font-family: Arial, sans-serif; text-align: center; background: #f8f8f8; }
         h1 { color: #333; }
 
+        .container {
+            width: 90%;
+            max-width: 800px;
+            margin: auto;
+            background: white;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+        }
+
         .grid-container {
             display: grid;
             grid-template-columns: repeat(5, 60px);
             grid-template-rows: repeat(5, 60px);
-            gap: 5px;
+            gap: 10px;
             justify-content: center;
             margin: 20px auto;
         }
+
         .grid-item {
             width: 60px;
             height: 60px;
@@ -28,43 +39,76 @@
             background: white;
             font-weight: bold;
             border-radius: 5px;
-            border: 1px solid #aaa;
+            border: 2px solid #444;
             font-size: 20px;
-            cursor: pointer;
-            transition: background 0.3s;
+            box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
         }
-        .correct { background-color: #b2fab4; } /* Verde pastel */
-        .incorrect { background-color: #f7b2b7; } /* Rosa pastel */
+
+        .correct { background-color: #b2fab4; }
+        .incorrect { background-color: #f7b2b7; }
+
+        button {
+            background: #007BFF;
+            color: white;
+            border: none;
+            padding: 10px 20px;
+            font-size: 16px;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: 0.3s;
+        }
+
+        button:hover {
+            background: #0056b3;
+        }
+
+        table {
+            width: 100%;
+            margin-top: 20px;
+            border-collapse: collapse;
+        }
+
+        th, td {
+            padding: 10px;
+            border: 1px solid #ddd;
+            text-align: center;
+        }
+
+        th {
+            background: #007BFF;
+            color: white;
+        }
     </style>
 </head>
 <body>
-    <h1>Juego de Preguntas: Bogotá</h1>
+    <div class="container">
+        <h1>Juego de Preguntas: Bogotá</h1>
+        <h2>Pregunta Actual</h2>
+        <p id="question">Haz clic en "Nueva Pregunta" para empezar</p>
+        <button onclick="generateQuestion()">Nueva Pregunta</button>
 
-    <h2>Pregunta Actual</h2>
-    <p id="question">Haz clic en "Nueva Pregunta" para empezar</p>
-    <button onclick="generateQuestion()">Nueva Pregunta</button>
+        <h2>Tablero de Preguntas</h2>
+        <div class="grid-container" id="questionBoard"></div>
 
-    <h2>Tablero de Preguntas</h2>
-    <div class="grid-container" id="questionBoard"></div>
-
-    <h2>Tabla de Resultados</h2>
-    <table border="1">
-        <thead>
-            <tr>
-                <th>Grupo</th>
-                <th>Respuesta</th>
-                <th>Puntos</th>
-            </tr>
-        </thead>
-        <tbody id="scoreboard">
-            <tr><td>Grupo 1</td><td id="resp1">-</td><td id="score1">0</td></tr>
-            <tr><td>Grupo 2</td><td id="resp2">-</td><td id="score2">0</td></tr>
-            <tr><td>Grupo 3</td><td id="resp3">-</td><td id="score3">0</td></tr>
-            <tr><td>Grupo 4</td><td id="resp4">-</td><td id="score4">0</td></tr>
-            <tr><td>Grupo 5</td><td id="resp5">-</td><td id="score5">0</td></tr>
-            <tr><td>Grupo 6</td><td id="resp6">-</td><td id="score6">0</td></tr>
-        </tbody>
-    </table>
+        <h2>Tabla de Resultados</h2>
+        <table>
+            <thead>
+                <tr>
+                    <th>Grupo</th>
+                    <th>Respuesta</th>
+                    <th>Puntos</th>
+                </tr>
+            </thead>
+            <tbody id="scoreboard">
+                <tr><td>Grupo 1</td><td id="resp1">-</td><td id="score1">0</td></tr>
+                <tr><td>Grupo 2</td><td id="resp2">-</td><td id="score2">0</td></tr>
+                <tr><td>Grupo 3</td><td id="resp3">-</td><td id="score3">0</td></tr>
+                <tr><td>Grupo 4</td><td id="resp4">-</td><td id="score4">0</td></tr>
+                <tr><td>Grupo 5</td><td id="resp5">-</td><td id="score5">0</td></tr>
+                <tr><td>Grupo 6</td><td id="resp6">-</td><td id="score6">0</td></tr>
+            </tbody>
+        </table>
+    </div>
 
     <script>
         document.addEventListener("DOMContentLoaded", () => {
