--- a/GuerraDeEstrellas/respuesta.html
+++ b/GuerraDeEstrellas/respuesta.html
@@ -9,23 +9,56 @@
     <script src="script.js" defer></script>
     <style>
         body { font-family: Arial, sans-serif; text-align: center; background: #f8f8f8; }
+        
+        .container {
+            width: 90%;
+            max-width: 400px;
+            margin: auto;
+            background: white;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+        }
+
         h1 { color: #333; }
-        select, input, button { margin: 10px; padding: 10px; font-size: 16px; }
+
+        select, input, button {
+            width: 100%;
+            margin-top: 10px;
+            padding: 10px;
+            font-size: 16px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+        }
+
+        button {
+            background: #007BFF;
+            color: white;
+            border: none;
+            cursor: pointer;
+            transition: 0.3s;
+        }
+
+        button:hover {
+            background: #0056b3;
+        }
     </style>
 </head>
 <body>
-    <h1>Participa en el Juego</h1>
-    <label for="group">Selecciona tu grupo:</label>
-    <select id="group">
-        <option value="1">Grupo 1</option>
-        <option value="2">Grupo 2</option>
-        <option value="3">Grupo 3</option>
-        <option value="4">Grupo 4</option>
-        <option value="5">Grupo 5</option>
-        <option value="6">Grupo 6</option>
-    </select>
+    <div class="container">
+        <h1>Participa en el Juego</h1>
+        <label for="group">Selecciona tu grupo:</label>
+        <select id="group">
+            <option value="1">Grupo 1</option>
+            <option value="2">Grupo 2</option>
+            <option value="3">Grupo 3</option>
+            <option value="4">Grupo 4</option>
+            <option value="5">Grupo 5</option>
+            <option value="6">Grupo 6</option>
+        </select>
 
-    <input type="text" id="answer" placeholder="Escribe tu respuesta en MAYÚSCULAS">
-    <button onclick="sendAnswer()">Enviar Respuesta</button>
+        <input type="text" id="answer" placeholder="Escribe tu respuesta en MAYÚSCULAS">
+        <button onclick="sendAnswer()">Enviar Respuesta</button>
+    </div>
 </body>
 </html>
