--- a/GuerraDeEstrellas/index.html
+++ b/GuerraDeEstrellas/index.html
@@ -59,70 +59,71 @@
     <div class="container">
         <h1>Juego de Preguntas: Bogotá</h1>
 
+        <h2>Configurar Tiempo</h2>
+        <select id="timeSelect">
+            <option value="30">30 segundos</option>
+            <option value="60">60 segundos</option>
+            <option value="90">90 segundos</option>
+        </select>
+
         <h2>Pregunta Actual</h2>
         <p id="question">Haz clic en un número para generar una pregunta.</p>
 
         <h3>Tiempo restante: <span id="timer">--</span> segundos</h3>
 
-        <h2>Tablero de Preguntas</h2>
-        <div class="grid-container" id="questionBoard"></div>
+        <div class="content">
+            <div>
+                <h2>Tablero de Preguntas</h2>
+                <div class="grid-container" id="questionBoard"></div>
+            </div>
 
-        <h2>Tabla de Resultados</h2>
-        <table>
-            <thead>
-                <tr>
-                    <th>Grupo</th>
-                    <th>Respuesta</th>
-                    <th>Puntos</th>
-                </tr>
-            </thead>
-            <tbody id="scoreboard">
-                <tr><td>Grupo 1</td><td id="resp1">-</td><td id="score1">0</td></tr>
-                <tr><td>Grupo 2</td><td id="resp2">-</td><td id="score2">0</td></tr>
-                <tr><td>Grupo 3</td><td id="resp3">-</td><td id="score3">0</td></tr>
-                <tr><td>Grupo 4</td><td id="resp4">-</td><td id="score4">0</td></tr>
-                <tr><td>Grupo 5</td><td id="resp5">-</td><td id="score5">0</td></tr>
-                <tr><td>Grupo 6</td><td id="resp6">-</td><td id="score6">0</td></tr>
-            </tbody>
-        </table>
+            <div>
+                <h2>Tabla de Resultados</h2>
+                <table>
+                    <thead>
+                        <tr>
+                            <th>Grupo</th>
+                            <th>Respuesta</th>
+                            <th>Puntos</th>
+                        </tr>
+                    </thead>
+                    <tbody id="scoreboard">
+                        <tr><td>Grupo 1</td><td id="resp1">-</td><td id="score1">0</td></tr>
+                        <tr><td>Grupo 2</td><td id="resp2">-</td><td id="score2">0</td></tr>
+                        <tr><td>Grupo 3</td><td id="resp3">-</td><td id="score3">0</td></tr>
+                        <tr><td>Grupo 4</td><td id="resp4">-</td><td id="score4">0</td></tr>
+                        <tr><td>Grupo 5</td><td id="resp5">-</td><td id="score5">0</td></tr>
+                        <tr><td>Grupo 6</td><td id="resp6">-</td><td id="score6">0</td></tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
     </div>
 
     <script>
         let countdown;
-        document.addEventListener("DOMContentLoaded", () => {
-            const board = document.getElementById("questionBoard");
-            for (let i = 1; i <= 25; i++) {
-                const cell = document.createElement("div");
-                cell.classList.add("grid-item");
-                cell.innerText = i;
-                cell.dataset.number = i;
-                cell.addEventListener("click", () => startQuestion(i));
-                board.appendChild(cell);
-            }
-        });
+        const questions = [
+            "BOGOTÁ", "1538", "MONSERRATE", "AJIACO", "PLAZA DE BOLÍVAR", 
+            "EL DORADO", "FESTIVAL IBEROAMERICANO DE TEATRO", "AVENIDA CHILE",
+            "TRANSMILENIO", "MUSEO DEL ORO", "MEDIA MARATÓN DE BOGOTÁ", "LA CANDELARIA",
+            "SAN VICTORINO", "BIBLIOTECA LUIS ÁNGEL ARANGO", "RÍO BOGOTÁ", 
+            "TEUSAQUILLO", "CATEDRAL DE SAL DE ZIPAQUIRÁ", "CICLOPASEO NOCTURNO",
+            "ZONA G", "ZONA T", "ARCHIVO GENERAL DE LA NACIÓN", "TITÁN PLAZA",
+            "FERNANDO BOTERO", "JAZZ AL PARQUE", "SEPTIMAZO"
+        ];
 
-        function startQuestion(number) {
-            const questionText = `Pregunta para el número ${number}`;
-            document.getElementById("question").innerText = questionText;
-            db.ref("game/currentQuestion").set({
-                number: number,
-                text: questionText
-            });
-
-            startTimer(30);
+        function startQuestion(num) {
+            document.getElementById("question").innerText = questions[num - 1];
+            startTimer(parseInt(document.getElementById("timeSelect").value));
         }
 
         function startTimer(seconds) {
             clearInterval(countdown);
             document.getElementById("timer").innerText = seconds;
-
             countdown = setInterval(() => {
                 seconds--;
                 document.getElementById("timer").innerText = seconds;
-                if (seconds <= 0) {
-                    clearInterval(countdown);
-                    document.getElementById("timer").innerText = "¡Tiempo agotado!";
-                }
+                if (seconds <= 0) clearInterval(countdown);
             }, 1000);
         }
     </script>
