--- a/GuerraDeEstrellas/index.html
+++ b/GuerraDeEstrellas/index.html
@@ -12,7 +12,7 @@
         body {
             font-family: Arial, sans-serif;
             text-align: center;
-            background: url('fondo.jpg') no-repeat center center fixed;
+            background: url('fondo1.jpg') no-repeat center center fixed;
             background-size: cover;
             color: #333;
         }
