--- a/GuerraDeEstrellas/index.html
+++ b/GuerraDeEstrellas/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Juego Bogotá - Tablero</title>
+    <title>Juego Guerra de puntos</title>
     <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-database.js"></script>
     <script src="script.js" defer></script>
@@ -138,7 +138,8 @@
 </head>
 <body>
     <div class="container">
-        <h1>Juego de Preguntas: Bogotá</h1>
+        <h1>Aprendiendo con:</h1>
+        <h1>LaProfeVivy- Bogotá</h1>
 
         <div class="content-container">
             <h2>Pregunta Actual</h2>
