--- a/DatosScratch/Puntaje/index.html
+++ b/DatosScratch/Puntaje/index.html
@@ -1,1 +1,50 @@
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Resultados</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f0f8ff;
+            text-align: center;
+            padding-top: 50px;
+        }
+        h1 {
+            color: #4CAF50;
+        }
+        .resultado {
+            font-size: 24px;
+            margin-top: 20px;
+        }
+        .medalla {
+            font-size: 30px;
+            color: gold;
+        }
+    </style>
+</head>
+<body>
+    <h1>¡Juego Terminado!</h1>
+    <div class="resultado">
+        <p id="nombreEstudiante"></p>
+        <p id="puntaje"></p>
+    </div>
+
+    <script>
+        // Obtener el nombre y puntaje
+        let nombre = localStorage.getItem("nombreEstudiante");
+        let puntaje = 3;  // Aquí puedes poner la variable que obtenga el puntaje real del juego
+
+        // Mostrar el nombre y puntaje
+        document.getElementById("nombreEstudiante").innerText = `Nombre: ${nombre}`;
+        document.getElementById("puntaje").innerText = `Puntaje: ${puntaje}/3`;
+
+        // Agregar medalla si tiene puntaje perfecto
+        if (puntaje === 3) {
+            document.getElementById("puntaje").innerHTML += " 🏅 Medalla de Oro";
+        }
+    </script>
+</body>
+</html>
 
